@@ -36,6 +36,7 @@ camera-delete=Delete selected camera.
 camera-delete-last=Cannot delete last camera.
 camera-enable=Enable/Disable camera taking screenshots.
 camera-refresh=Recalculate the camera settings. (due to rounding issues the actual values might differ a little)
+pause-on-open=Pause game when this window is open.
 tracker-cannot-delete-last=Cannot delete last tracker.
 tracker-cannot-delete-inuse=Cannot delete tracker because it is in use.
 tracker-cannot-enable=This tracker cannot be enabled/disabled, this is managed by a specific event/trigger.
