@@ -22,6 +22,27 @@ data:extend(
             position = {65, 0},
             scale = 0.5,
             flags = {"gui-icon"}
+        },
+        {
+            type = "sprite",
+            name = "play-white",
+            filename = "__TLBE__/graphics/play-white.png",
+            priority = "medium",
+            width = 32,
+            height = 32,
+            mipmap_count = 2,
+            scale = 0.5,
+            flags = {"gui-icon"}
+        },
+        {
+            type = "sprite",
+            name = "pause-white",
+            filename = "__TLBE__/graphics/pause-white.png",
+            priority = "medium",
+            width = 32,
+            height = 32,
+            mipmap_count = 2,
+            flags = {"gui-icon"}
         }
     }
 )
